test/spec_vectors/simd_lane/ok/module_151.wat
(module (func (result i32) (i32x4.extract_lane 3 (v128.const i32x4 0 0 0 0))))