test/spec_vectors/simd_lane/fail/module_175.wat
(module (func $i8x16.replace_lane-2nd-arg-empty (result v128) (i8x16.replace_lane 0 (i32.const 1))))